Complete square grid implementation w/ dead hexes