@@ -23,7 +23,7 @@
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.4</version>
+        <version>2.8.0</version>
     </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
@@ -78,7 +78,6 @@
           <version>3.8.1</version>
           <configuration>
               <release>15</release>
-              <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
       </plugin>
       <plugin>
@@ -86,7 +85,6 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M3</version>
           <configuration>
-              <argLine>--enable-preview</argLine>
           </configuration>
       </plugin>
   </plugins>
